ipc/ipdl/test/ipdl/error/PUnknownProc.ipdl
//error: invalid value for attribute `ChildProc', expected one of: any, anychild, anydom, compositor, Parent, Content, IPDLUnitTest, GMPlugin, GPU, VR, RDD, Socket, RemoteSandboxBroker, ForkServer, Utility

[ChildProc=unknowntype]
protocol PUnknownProc {
parent:
    async Msg();
};
